--- a/hudson-scripts/README
+++ b/hudson-scripts/README
@@ -9,7 +9,7 @@ cd $CSS_CI_DIR
 git clone https://github.com/ghmegan/csstudio-ci.git || echo "csstudio-ci exists... updating"
 cd csstudio-ci
 git pull
-hudson-scripts/setup_hudson.sh
+bash -x hudson-scripts/setup_hudson.sh
 ```
 Where CSS_CI_DIR is set in the Hudson setup and is a writable directory for the user running Hudson.
 
@@ -23,35 +23,35 @@ css_repo/compositeArtifacts.xml
 Git : https://github.com/ControlSystemStudio/diirt.git
 Script:
 ```
-$CSS_CI_DIR/hudson-scripts/do_build.sh diirt
+$CSS_CI_DIR/csstudio-ci/hudson-scripts/do_build.sh diirt
 ```
 
 Git: https://github.com/ControlSystemStudio/maven-osgi-bundles.git
 Script:
 ```
-$CSS_CI_DIR/hudson-scripts/do_build.sh maven-osgi-bundles
+$CSS_CI_DIR/csstudio-ci/hudson-scripts/do_build.sh maven-osgi-bundles
 ```
 
 Git: https://github.com/ControlSystemStudio/cs-studio-thirdparty.git
 Script:
 ```
-$CSS_CI_DIR/hudson-scripts/do_build.sh cs-studio-thirdparty
+$CSS_CI_DIR/csstudio-ci/hudson-scripts/do_build.sh cs-studio-thirdparty
 ```
 
 Git: https://github.com/ControlSystemStudio/cs-studio.git
 Script:
 ```
-$CSS_CI_DIR/hudson-scripts/do_build.sh cs-studio
+$CSS_CI_DIR/csstudio-ci/hudson-scripts/do_build.sh cs-studio
 ```
 
 Git: https://github.com/kasemir/org.csstudio.display.builder
 Script:
 ```
-$CSS_CI_DIR/hudson-scripts/do_build.sh org.csstudio.display.builder
+$CSS_CI_DIR/csstudio-ci/hudson-scripts/do_build.sh org.csstudio.display.builder
 ```
 
 Git: https://github.com/ControlSystemStudio/org.csstudio.sns.git
 Script:
 ```
-$CSS_CI_DIR/hudson-scripts/do_build.sh org.csstudio.sns
+$CSS_CI_DIR/csstudio-ci/hudson-scripts/do_build.sh org.csstudio.sns
 ```
